update package names

--- a/packages/terra-theme-context/package.json
+++ b/packages/terra-theme-context/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mjhenkes/terra-theme-context",
+  "name": "mjhenkes-terra-theme-context",
   "main": "lib/ThemeContext.js",
   "version": "1.2.0",
   "description": "A react context to provide the current theme.",
@@ -38,5 +38,6 @@
     "precompile": "rm -rf lib",
     "test": "npm run lint && npm run jest",
     "jest": "jest --config ../../jestconfig.js"
-  }
+  },
+  "gitHead": "b56577a610330eccfe5cb9d11865c8bde3f10dbe"
 }
