--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "wdio-default": "wdio",
     "wdio-lowlight": "NODE_OPTIONS=--max-old-space-size=2048 THEME=clinical-lowlight-theme wdio",
     "wdio-fusion": "THEME=orion-fusion-theme wdio",
-    "wdio": "npm run wdio-default && npm run wdio-lowlight && npm run wdio-fusion"
+    "wdio": "npm run wdio-default && npm run wdio-lowlight && npm run wdio-fusion",
+    "version": "lerna version --no-git-tag-version"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
