--- a/.travis.yml
+++ b/.travis.yml
@@ -144,11 +144,11 @@ jobs:
     #     - docker-compose up -d standalone-chrome-travis
     #     - SITE=$TRAVIS_BUILD_DIR/travis-build/fusion FORM_FACTOR=enormous npm run wdio-fusion
 
-    # - stage: publish
-    #   script:
-    #     - rm -rf ./travis-build
-    #     - npx lerna publish from-package --yes > publish-output.txt
-    #     - node ./scripts/release/gitTagMonoRepo.js
+    - stage: publish
+      script:
+        - rm -rf ./travis-build
+        - npx lerna publish from-package --yes > publish-output.txt
+        - node ./scripts/release/gitTagMonoRepo.js
 
     - stage: deploy
       script: skip
