--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 branches:
   only:
-    - main
+    - master
 cache:
   directories:
     - travis-build
@@ -13,137 +13,6 @@ before_install:
   - npm run clean
 jobs:
   include:
-    # - stage: danger lint jest and compile
-    #   script:
-    #     # clear the cache of any old build artifacts
-    #     - rm -rf ./travis-build
-    #     - npm run danger
-    #     - npm run lint
-    #     - npm run jest
-    #     # These can't be built in parallel because the cache is a single object and you can't add to it in parallel
-    #     - npm run compile:prod -- --env.disableAggregateThemes --output-path $TRAVIS_BUILD_DIR/travis-build/default
-    #     - npm run compile:lowlight -- --output-path $TRAVIS_BUILD_DIR/travis-build/lowlight
-    #     - npm run compile:fusion -- --output-path $TRAVIS_BUILD_DIR/travis-build/fusion
-    # # Split out all the sizes to not eat up all the travis executors at once.
-
-    # - stage: tiny & small
-    #   name: tiny default-theme
-    #   # Don't clean install
-    #   before_install: skip
-    #   # Rely on the cache for node_modules.. this won't work for any node modules in the packages dir but works for running wdio
-    #   install: skip
-    #   script:
-    #     # we start up our own standalone chrome instance because the Selenium Docker Service doesn't seem to work here.
-    #     - docker-compose up -d standalone-chrome-travis
-    #     # using the travis env section to set env variables seems to break cache
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/default FORM_FACTOR=tiny npm run wdio-default
-    # - name: tiny lowlight-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/lowlight FORM_FACTOR=tiny npm run wdio-lowlight
-    # - name: tiny fusion-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/fusion FORM_FACTOR=tiny npm run wdio-fusion
-    # - name: small default-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/default FORM_FACTOR=small npm run wdio-default
-    # - name: small lowlight-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/lowlight FORM_FACTOR=small npm run wdio-lowlight
-    # - name: small fusion-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/fusion FORM_FACTOR=small npm run wdio-fusion
-
-    # - stage: medium & large
-    #   name: medium default-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/default FORM_FACTOR=medium npm run wdio-default
-    # - name: medium lowlight-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/lowlight FORM_FACTOR=medium npm run wdio-lowlight
-    # - name: medium fusion-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/fusion FORM_FACTOR=medium npm run wdio-fusion
-    # - name: large default-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/default FORM_FACTOR=large npm run wdio-default
-    # - name: large lowlight-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/lowlight FORM_FACTOR=large npm run wdio-lowlight
-    # - name: large fusion-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/fusion FORM_FACTOR=large npm run wdio-fusion
-
-    # - stage: huge & enormous
-    #   name: huge default-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/default FORM_FACTOR=huge npm run wdio-default
-    # - name: huge lowlight-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/lowlight FORM_FACTOR=huge npm run wdio-lowlight
-    # - name: huge fusion-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/fusion FORM_FACTOR=huge npm run wdio-fusion
-    # - name: enormous default-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/default FORM_FACTOR=enormous npm run wdio-default
-    # - name: enormous lowlight-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/lowlight FORM_FACTOR=enormous npm run wdio-lowlight
-    # - name: enormous fusion-theme
-    #   before_install: skip
-    #   install: skip
-    #   script:
-    #     - docker-compose up -d standalone-chrome-travis
-    #     - SITE=$TRAVIS_BUILD_DIR/travis-build/fusion FORM_FACTOR=enormous npm run wdio-fusion
-
     - stage: publish
       script:
         - rm -rf ./travis-build
@@ -161,12 +30,8 @@ jobs:
         github_token: $GITHUB_TOKEN # Set in travis-ci.com dashboard
         local_dir: $TRAVIS_BUILD_DIR/build
         on:
-          branch: main
+          branch: master
 stages:
-  # - danger lint jest and compile
-  # - tiny & small
-  # - medium & large
-  # - huge & enormous
   - name: publish
     if: type != pull_request
   - name: deploy
