don't fail when nothing to tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,11 @@ before_install:
   - npm run clean
 jobs:
   include:
-    - stage: publish
+    - stage: publish & deploy
       script:
         - rm -rf ./travis-build
         - npx lerna publish from-package --yes > publish-output.txt
         - node ./scripts/release/gitTagMonoRepo.js
-
-    - stage: deploy
-      script: skip
       before_deploy:
         # Build again for deployment because we need the Public path to be updated.
         - TERRA_DEV_SITE_NEW_RELIC_LICENSE_KEY='c494ac44c8' TERRA_DEV_SITE_NEW_RELIC_APPLICATION_ID='144458769' TERRA_DEV_SITE_PUBLIC_PATH='/terra-framework/' npm run compile:prod
@@ -32,7 +29,5 @@ jobs:
         on:
           branch: master
 stages:
-  - name: publish
-    if: type != pull_request
-  - name: deploy
+  - name: publish & deploy
     if: type != pull_request
