--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ jobs:
     - stage: publish & deploy
       script:
         - rm -rf ./travis-build
+        # add auth token to .npmrc for lerna publish
+        - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
         - npx lerna publish from-package --yes > publish-output.txt
         - node ./scripts/release/gitTagMonoRepo.js
       before_deploy:
