--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
         - rm -rf ./travis-build
         # add auth token to .npmrc for lerna publish
         - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null
-        # - npx lerna publish from-package --yes > publish-output.txt
+        - npx lerna publish from-package --yes > publish-output.txt
         - node ./scripts/release/gitTagMonoRepo.js $GITHUB_TOKEN
       before_deploy:
         # Build again for deployment because we need the Public path to be updated.
